modified:   src/index.html   - fix layout issues
  - will add layout for daily forecast

modified:   src/index.js
  - add search functionality
  - calls api for common weather data

  - will add daily forecast
  - wil add hourly forecast

modified:   src/style.css
  - using PicoCSS for design (sorry I'm not into styling)
  - basic styling
  - no changes

--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,7 @@
 * {
   prefers-color-scheme: dark;
+  color: white;
+  font-weight: 300;
 }
 
 #navItems > ul:nth-child(1) > li > strong {
